--- a/SpatialMapping.vcxproj
+++ b/SpatialMapping.vcxproj
@@ -212,6 +212,8 @@ copy "$(SolutionDir)Assets\" "$(TargetDir)AppX\Assets\"</Command>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <BrowseInformation>true</BrowseInformation>
+      <Optimization>MaxSpeed</Optimization>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <PostBuildEvent>
       <Command>mkdir "$(TargetDir)AppX\Assets\"
@@ -284,6 +286,7 @@ copy "$(SolutionDir)Assets\" "$(TargetDir)AppX\Assets\"</Command>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <BrowseInformation>true</BrowseInformation>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
     </ClCompile>
     <PostBuildEvent>
       <Command>mkdir "$(TargetDir)AppX\Assets\"
