--- a/SpatialMapping.vcxproj
+++ b/SpatialMapping.vcxproj
@@ -37,6 +37,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\intermediates\$(Platform)\$(Configuration)\</IntDir>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{a1c64dff-c9bb-50af-b717-e843b546ee6a}</ProjectGuid>
@@ -269,6 +270,11 @@ copy "$(SolutionDir)Assets\" "$(TargetDir)AppX\Assets\"</Command>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <BrowseInformation>true</BrowseInformation>
     </ClCompile>
+    <PostBuildEvent>
+      <Message>Copy image assets to build folder</Message>
+      <Command>mkdir "$(TargetDir)AppX\Assets\"
+copy "$(SolutionDir)Assets\" "$(TargetDir)AppX\Assets\"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <Link>
